2001-11-02  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_run.c (bk_run_destroy): don't destroy things twice, but
	destroy everything at least once.

2001-11-01  James Tanis  <jtt@localhost.localdomain>

	* lib/b_run.c (bk_run_once): Add on demand function calls.
	(bk_run_on_demand_add): Public functions to add and remove functions
	to and from on demand list.
	(bk_run_once): sort out whether idle task should be run.
	(bk_run_once): sort out exactly which timeout to use in select.

2001-11-01  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_run.c (bk_run_once): update poll functions to have list.
	(bk_run_once): Add idle task.
	(bk_run_poll_add): Public functions to add and remove functions
	to and from poll list.
	(bk_run_idle_add): Public functions to add  and remove functions
	to and run idle list.

2001-11-01  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c (bk_run_handsoff): Yes, we do need a method of getting rid of file associations

2001-09-21  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_bits.c: libbk not libphadm.

2001-10-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_bits.c (bk_bits_create): allocate a byte for zero bits

2001-10-10  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_bits.c (bk_bits_save): save 0 bits as "0" [distinct from "00"]
	(bk_bits_restore): restore "0" as 0 bits [allocate a byte anyhow]

2001-09-30  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_run.c: Initial baka run environment

2001-09-29  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_STRING_QUOTE_NULLOK): allow NULL char *
	(BK_NULLSTR): string placeholder for NULL

	* lib/b_bits.c (bk_bits_save): decrement size by 8 bits per char
	(bk_bits_restore): size (in bits) is 4*strlen(x)

	* lib/b_string.c (bk_string_tokenize_split): avoid segv for default ws
	(bk_string_quote): generate NULL for NULL, if ok

2001-09-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: include winsock.h, process.h, instead