@@ -1,3 +1,7 @@
+2001-11-05  James Tanis  <jtt@winwood.sysdetect.com>
+
+	* src/proto.c (main): Port to popt.
+
 2001-11-02  James Tanis  <jtt@winwood.sysdetect.com>
 
 	* lib/b_run.c (bk_run_destroy): don't destroy things twice, but
